--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
- 
+
  * {
   margin: 0;
   padding: 0;
@@ -29,6 +29,7 @@ header {
   padding: 15px 0;
   margin: 30px auto 0;
   text-align: center;
+  border-top: solid 5px #000000;
 }
 
 header .headline {
@@ -81,7 +82,7 @@ main{
   display: block;
   color: gray;
   font-size: 12px;
-  overflow: hidden;  
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
@@ -89,7 +90,7 @@ main{
 .list-title {
   display: block;
   font-size: 18px;
-  overflow: hidden;  
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
